<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Happy Baby</string>
    <string name="app_detail">Энэхүү апп нь 0-3 насны хүүхэдтэй бүх эцэг эхчүүдэд зориулсан. Хүүхэд бүхэн 
        өдөр өдрөөр өсч цаг минут бүрд шинэ зүйлийг сурч мэдэн шинээр сурсан зүйлээ аав 
        ээждээ харуулан аз жаргал бэлэглэдэг билээ. Тэрхүү аз жаргалтай мөчүүд хэзээ болж
        өнгөрсөн цаг хугацааг нь тэр бүр бид тэмдэглэн авч амждаггүй. Харин HappyBaby апп
        энэ боломжийг та бүхэнд олгож байна.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="profile">Миний тухай</string>

    <string-array name="nav_array">
        <item>Happy Baby</item>
        <item>График чарт</item>
        <item>Хоолондоо</item>
        <item>Живхээ солъё</item>
        <item>Эрүүл байя</item>
        <item>Миний хэмнэл</item>
        <item>Би чадна</item>
        <item>Миний шүд</item>
        <item>Бяцхан лавлах</item>
        <item>Зөвлөгөө</item>
        <item>Тохиргоо</item>
        <item>Апп-н тухай</item>
    </string-array>
    <string-array name="feed_array">
        <item>Бантан</item>
        <item>Төмсний нухаш</item>
        <item>Каш</item>
        <item>Ногооны зутан</item>
        <item>Тараг</item>
    </string-array>
    <string-array name="drink_array">
        <item>Цэвэр ус</item>
        <item>Сүү</item>
        <item>Ундаа</item>
        <item>Цай</item>
        <item>Жимсний шүүс</item>
    </string-array>
    <string-array name="vitamin_array">
        <item>Д витамин</item>
        <item>А витамин</item>
        <item>Мульти витамин</item>
        <item>Кальц</item>
        <item>Бусад</item>
    </string-array>
    <string-array name="vaccine_array">
        <item>0 сартайд</item>
        <item>2 сартайд</item>
        <item>3 сартайд</item>
        <item>4 сартайд</item>
        <item>9 сартайд</item>
    </string-array>
    <string-array name="learn_array">
        <item>Гэртээ ирлээ</item>
        <item>Анхны инээд</item>
        <item>Алгаа ташлаа</item>
        <item>Эргэж хөрвөөлөө</item>
        <item>Суудаг боллоо</item>
    </string-array>
    <string-array name="purchase_array">
        <item>Нэмэлт сүү</item>
        <item>Живх</item>
        <item>Каш</item>
    </string-array>

    <string name="month">сар</string>
    <string name="mon">да</string>
    <string name="tue">мя</string>
    <string name="wed">лх</string>
    <string name="thu">пү</string>
    <string name="fri">ба</string>
    <string name="sat">бя</string>
    <string name="sun">ня</string>
    <string name="num">удаа</string>
    <string name="right">Баруун</string>
    <string name="left">Зүүн</string>
    <string name="gender_girl">Охин</string>
    <string name="gender_boy">Хүү</string>
    <string name="hospital_name">1 төрөх</string>
    <string name="breast">Мээмээ хөхлөө</string>
    <string name="feed">Нэмэгдэл хоол</string>
    <string name="formula">Нэмэгдэл сүү</string>
    <string name="drink">Шингэн уух зүйл</string>
    <string name="amount">ширхэг</string>
    <string name="tugrug">төгрөг</string>
    <string name="ml">мл</string>
    <string name="total">нийт</string>
    <string name="sm">см</string>
    <string name="gr">гр</string>
    <string name="tug">₮</string>
    <string name="hospital">Эмчид үзүүлсэн</string>
    <string name="purchase">авлаа</string>

    <!-- Crouton -->
    <string name="success">Аз жаргалтай мөчийг хадгалан авлаа :)</string>
    <string name="notavailable">Уучлаарай, Энэ хувилбар дээр ажиллах боломжгүй : )</string>
    <string name="demoversion">Hi! Demo хувилбарт зориулж, бэлэн дата орууллаа</string>
    <string name="pleaseselect">Аль нэг сонголтоос сонгоно уу : )</string>
    <string name="tooth">Шүд</string>
    <string name="tooth_grow">цухуйлаа</string>
    <string name="congrats">Баяр хүргэе</string>
    <string name="hooray">Хурай хурай</string>

    <!-- Settings -->
    <string name="isReminderSet">Сануулга оруулах эсэх</string>
    <string name="monthlyAdvise">Сар бүрийн зөвлөгөө</string>
    <string name="vaccineReminder">Вакцин хийх сануулга</string>
    <string name="monthReminder">Сарын ойн сануулга</string>

    <!-- Setup -->
    <string name="lastName">Овог</string>
    <string name="firstName">Нэр</string>
    <string name="birthDate">Төрсөн он сар өдөр</string>
    <string name="birthWidth">Төрсөн жин</string>
    <string name="birthHeight">Төрсөн өндөр</string>
    <string name="birthHeadCirc">Төрсөн толгойн тойрог</string>
    <string name="birthHospital">Төрсөн эмнэлэг</string>
    <string name="birthDoctor">Төрүүлсэн эмч</string>

    <!-- Add -->
    <string name="breastLeft">Зүүн</string>
    <string name="breastRight">Баруун</string>

    <!-- Chart -->
    <string name="feedNum">Хооллолтын тоо</string>
    <string name="weightHeightLine">Жин өндрийн</string>
    <string name="heightAgeLine">Өндөр насны</string>
    <string name="weightAgeLine">Жин насны</string>
    <string name="breastPieChart">Мээмээ</string>

    <!-- Diaper -->
    <string name="changeDiaper">Живхээ солилоо</string>
    <string name="dirty">Баастай</string>
    <string name="wet">Шээстэй</string>
    <string name="mixed">Холимог</string>
    <string name="dry">Хуурай</string>

    <!-- Hospital -->
    <string name="hospitalName">Эмнэлэгийн нэр</string>
    <string name="doctorName">Эмчийн нэр</string>
    <string name="pain">Зовиур</string>
    <string name="diagnosis">Онош</string>
    <string name="healing">Эмчилгээ</string>
    <!-- Anniversary -->
    <string name="takePhoto">Зураг авах</string>
    <string name="choosePhoto">Галлерейгаас Сонгох</string>

    <!-- Active Operations -->
    <string name="shower">Усанд орлоо</string>
    <string name="sleep">Унтлаа</string>
    <string name="play">Тоголлоо</string>
    <string name="out">Гадаа гарлаа</string>
    <string name="massage">Массаж хийлгэв</string>
    <string name="ear">Чихээ цэвэрлүүлэв</string>
    <string name="nose">Хамраа цэвэрлүүлэв</string>

    <!-- Baby timeline -->
    <string name="born">төрлөө</string>
    <!-- Growth timeline -->
    <string name="babymonth">сар хүрлээ</string>
    <string name="headCirc">Толгойн тойрог</string>
    <string name="weight">Жин</string>
    <string name="height">Өндөр</string>

    <!-- Help Center -->
    <string name="helpCenter">Зөвлөгөө</string>

    <!-- Intro -->
    <string name="skip">Шууд эхлэе</string>
    <string name="start">Эхлэе</string>

    <string-array name="intro_title_array">
        <item>Хяналтын хэсэг</item>
        <item>Өсөлтийн мэдээлэл</item>
        <item>Вакцин, ээлжит үзлэг</item>
        <item>Аз жаргалтай мөчүүд</item>
        <item>Дотны зөвлөгч</item>
        <item>Бяцхан лавлах</item>
    </string-array>
        <string-array name="intro_desc_array">
        <item>Хүүхдийн хооллолт, живх солих, унтах зэрэг өдөр тутмын хэмнэлийг бүртгэж хянах</item>
        <item>Өндөр, жин, толгойн тойрог биеийн хөгжлийг хэвийн хэмжээнд байгаа эсэхийг шалгах</item>
        <item>Хүүхдийнхээ хэмжилт болон вакцинаа хугацаанд нь хийлгэх</item>
        <item>Бяцхан үрсийн шинэхэн авъяас чадварууд</item>
        <item>Мэргэжлийн эмч нарын зөвлөгөө</item>
        <item>Эмнэлэг, эмч, бариач нарын хаяг, утасны дугаарууд</item>
    </string-array>
    

</resources>