<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text"
            android:maxLength="30"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:maxLength="30"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthDate"
            android:inputType="text"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthHospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthHospital"
            android:inputType="text"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthDoctor"
            android:inputType="text"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthWidth"
            android:inputType="number"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthHeigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthHeight"
            android:inputType="number"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthHeadCirc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthHeadCirc"
            android:inputType="number"
            android:paddingTop="10dp"
            android:textColor="@color/fontSecond"
            android:textSize="18sp" />
        
         <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:onClick="nextButton"
            android:background="@color/mainColor"
            android:src="@drawable/ic_close_white_24dp" />
            
    </LinearLayout>

</RelativeLayout>