<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/monthReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthReminder"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/vaccineReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccineReminder"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/monthlyAdvise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthlyAdvise"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/isReminderSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isReminderSet"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>