<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/entity_medcheck"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="50dp" >

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_access_time_white_24dp" />

            <TextView
                android:id="@+id/timeMedcheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Change Date"
                android:textColor="#fff"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/headCircLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:text="@string/headCirc"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/headCirc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/headCircSm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:text="@string/sm"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:text="@string/weight"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/weightSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:text="@string/gr"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/heightLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:paddingLeft="5dp"
                        android:text="@string/height"
                        android:textColor="#fff"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/height"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:inputType="number"
                        android:maxLength="2"
                        android:padding="10dp"
                        android:textColor="#fff"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/heightSm"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:paddingLeft="5dp"
                        android:text="@string/sm"
                        android:textColor="#fff"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/entity_medcheck"
            android:padding="10dp"
            android:src="@drawable/ic_close_white_36dp" >
        </ImageButton>

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/entity_medcheck"
            android:padding="10dp"
            android:src="@drawable/ic_check_white_36dp" >
        </ImageButton>
    </LinearLayout>

</RelativeLayout>