<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/entity_ao_shower"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="40dp" >

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_access_time_white_24dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/timeChangeDiaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Change Date"
                android:textColor="#fff"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="50dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageButton
                    android:id="@+id/dirtyIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/diaper_oval"
                    android:src="@drawable/icon_dirty" />

                <TextView
                    android:id="@+id/dirty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:text="@string/dirty"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageButton
                    android:id="@+id/wetIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/diaper_oval"
                    android:src="@drawable/icon_wet" />

                <TextView
                    android:id="@+id/wet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:text="@string/wet"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageButton
                    android:id="@+id/mixedIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/diaper_oval"
                    android:src="@drawable/icon_mixed" />

                <TextView
                    android:id="@+id/mixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:text="@string/mixed"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageButton
                    android:id="@+id/dryIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/diaper_oval" />

                <TextView
                    android:id="@+id/dry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:text="@string/dry"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/entity_ao_shower"
            android:padding="10dp"
            android:src="@drawable/ic_close_white_36dp" >
        </ImageButton>

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/entity_ao_shower"
            android:padding="10dp"
            android:src="@drawable/ic_check_white_36dp" >
        </ImageButton>
    </LinearLayout>

</RelativeLayout>